--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Adriana Felisa Chávez De la Peña
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Adriana F. Chávez!</h1>
+	<p>I'm a very enthusiastic <em>undergrad</em> Psychology student at the National Autonomous University of Mexico </p>
+	<p> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
