--- a/about/index.html
+++ b/about/index.html
@@ -1,18 +1,21 @@
 ---
 layout: default
-title: Lab25 About
+title: About Adrifelcha
 ---
 <div class="blurb">
 
-	<h3>About me</h3>
+	<h1>About me: Who am I?</h1>
   
+	<h2>
 	<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
 	
 	<p></p>
 	
 	
 	<p></p>
-  
+	</h2>
+
+<h3>
  <p>
  <a class='link' href="adrifelcha@gmail.com"><i class='fa fa-envelope-o'></i> adrifelcha@gmail.com </a> 
  </p>
@@ -22,6 +25,7 @@ title: Lab25 About
   <p>
  Click here for my <a class='link' href="/documents/CV_FullFelisa.pdf"> Full CV (English) </a>
  </p>
+</h3>
 	
  	
 </div><!-- /.blurb -->
