--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: Adriana Felisa Chávez De la Peña
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
-	<p>I'm a very enthusiastic <em>undergrad</em> Psychology student at the National Autonomous University of Mexico </p>
+	
+	<h5> Welcome to my very first GitHub page! </h5>
+	
+	<h3> 
+	<p>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </p>
 	<p> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
