--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@ title: My work
 ---
 <div class="blurb">
 
-	<h1>About me: Who am I?</h1>
+	<h1>My work: What do I do?</h1>
   
 	<h2>
 	<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
