--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Adriana Felisa Chávez De la Peña
+title: AdriFelCha
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
