--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: AdriFelCha
+title: Adriana F. Chavez
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
