--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Adriana F. Chavez
 <div class="blurb">
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
 	
+	<p> Something is not working </p>
+	
 	<h5> Welcome to my very first GitHub page! </h5>
 	
 	<h3> 
