--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 ---
 layout: default
-title: Adriana F. Chavez
+title: Home
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
 	
-	<p> Something is not working </p>
-	
-	<h5> Welcome to my very first GitHub page! </h5>
-	
-	<h3> 
 	<p>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </p>
 	<p> Don't trust me. <a href="/about">Read more about my life...</a></p>
 	</h3>
