--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,11 @@ title: About Adrifelcha
 ---
 <div class="blurb">
 
+	<center><header class=style2 style="background-color: green;">
+      		<h1 class="project-name">{{ page.title }}</h1>
+    	</header>
+				
+			<br><br>
 	<h1>About me: Who am I?</h1>
   
 	<h2>
