--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: About Adrifelcha
+title: About me
 ---
-<div class="blurb">
 
 	<center><header class=style2 style="background-color: green;">
       		<h1 class="project-name">{{ page.title }}</h1>
     	</header>
-				
+	
+		<div class="container">
 			<br><br>
 	<h1>About me: Who am I?</h1>
   
