--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: My work
 ---
-<div class="blurb">
+		<center><header class=style2 style="background-color: blue;">
+      		<h1 class="project-name">{{ page.title }}</h1>
+    		</header>
+	
+		<br><br>
+		<div class="container">
+		<br><br>
 
 	<h1>My work: What do I do?</h1>
   
