--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 layout: default
 title: Home
 ---
-<div class="blurb">
+	<header class=style2 style="background-color: green;">
+      		<h1 class="project-name">{{ page.title }}</h1>
+    	</header>
+	
+		<br><br>
+		<div class="container">
+		<br><br>
+			
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
 	
 	<p>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </p>
 	<p> Don't trust me. <a href="/about">Read more about my life...</a></p>
 	</h3>
-</div><!-- /.blurb -->
+</div>
