--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 			
 	<h1>Hi there, I'm Adriana F. Chávez!</h1>
 	
-	<p>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </p>
-	<p> Don't trust me. <a href="/about">Read more about my life...</a></p>
-	</h3>
+	<h1>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
+	
+			<h3><b>I can't decide which colors use for my website :C I wanted something full of life (like a  rainbow) but that doesn't look quite academic-ish</b></h3>
 </div>
