--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,15 @@ layout: default
 title: About me
 ---
 
-	<center><header class=style2 style="background-color: green;">
+			<center>
+			<div class="w3-container">
+ 				  <input type="button" class="w3-button w3-black" value="Input Button">
+  				  <button class="w3-button w3-black">Button Button</button>
+  				  <a href="#" class="w3-button w3-black">Link Button</a>
+			</div> 				
+			</center>
+
+	<header class=style2 style="background-color: green;">
       		<h1 class="project-name">{{ page.title }}</h1>
     	</header>
 	
