--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-	<header class=style2 style="background-color: green;">
+	<header class=style2 style="background-color: #DBA901; font-weight: bold;">
       		<h1 class="project-name">{{ page.title }}</h1>
     	</header>
 	
