--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: My work
 ---
-		<center><header class=style2 style="background-color: blue;">
+		<center><header class=style2 style="background-color: #084B8A;">
       		<h1 class="project-name">{{ page.title }}</h1>
     		</header>
 	
