--- a/about/index.html
+++ b/about/index.html
@@ -13,8 +13,8 @@ title: About me
 	<br><br>
 
 
-	<header class=style2 style="background-color: green;">
-      		<h1 class="project-name">{{ page.title }}</h1>
+	<header class=style2 style="background-color: #8A0808;">
+		<h1 class="project-name"><b>{{ page.title }}</b></h1>
     	</header>
 	
 		<br><br>
