--- a/about/index.html
+++ b/about/index.html
@@ -3,19 +3,17 @@ layout: default
 title: About me
 ---
 
-	<center>
-		<div class="w3-container">
- 			<input type="button" class="w3-button w3-black" value="Input Button">
-  			<button class="w3-button w3-black">Button Button</button>
-  			<a href="#" class="w3-button w3-black">Link Button</a>
-		</div>
-	</center>
-	<br><br>
-
-
 	<header class=style2 style="background-color: #8A0808;">
 		<h1 class="project-name"><b>{{ page.title }}</b></h1>
     	</header>
+		<br><br>
+	<center>
+		<div class="w3-container">
+ 			<a href="#" class="w3-button w3-black">Who am I?</a>
+  			<a href="#" class="w3-button w3-black">Contact Info</a>
+  			<a href="#" class="w3-button w3-black">Bio & General description</a>
+		</div>
+	</center>
 	
 		<br><br>
 		<div class="container">
