--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: About me
 ---
+<nav style="background-color:yellow;"> </nav>
 
 	<header class=style2 style="background-color: #8A0808;">
 		<h1 class="project-name"><b>{{ page.title }}</b></h1>
@@ -18,7 +19,7 @@ title: About me
 		<br><br>
 		<div class="container">
 		<br><br>
-		<h1>About me: Who am I?</h1>
+		<h1>Who am I?</h1>
   		<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
 	
  <p>
