--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: About me
 ---
-
+<body background="fondo_pages.png">
 	<header class=style2 style="background-color: #8A0808;">
 		<h1 class="project-name"><b>{{ page.title }}</b></h1>
     	</header>
@@ -34,5 +34,5 @@ title: About me
 	
  	
 </div><!-- /.blurb -->
-
+</body>
 <!-- about me -->
