--- a/cv/index.html
+++ b/cv/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: My work
 ---
+<body background="fondo_pages.png">
+
 		<center><header class=style2 style="background-color: #084B8A;">
       		<h1 class="project-name">{{ page.title }}</h1>
     		</header>
@@ -35,5 +37,5 @@ title: My work
 	
  	
 </div><!-- /.blurb -->
-
+			</body>
 <!-- about me -->
