--- a/events/index.html
+++ b/events/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About me
 ---
 <body background="fondo_pages.png">
-	<header class=style2 style="background-color: #8A0808;">
+	<header class=style2 style="background-color: purple;">
 		<h1 class="project-name"><b>{{ page.title }}</b></h1>
     	</header>
 		<br><br>
