--- a/about/contact.html
+++ b/about/contact.html
@@ -9,7 +9,7 @@ title: About me
 		<br><br>
 	<center>
 		<div class="w3-container">
- 			<a href="#" class="w3-button w3-black">Who am I?</a>
+ 			<a href="index.html" class="w3-button w3-black">Who am I?</a>
   			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
   			<a href="#" class="w3-button w3-black">Bio & General description</a>
 		</div>
