--- a/about/contact.html
+++ b/about/contact.html
@@ -18,7 +18,7 @@ title: About me
 		<br><br>
 		<div class="container">
 		<br><br>
-		<h1>Who am I?</h1>
+			<center><h1>Contact info</h1></center>
   		<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
 	
  <p>
