--- a/about/contact.html
+++ b/about/contact.html
@@ -20,7 +20,20 @@ title: About me
 		<br><br>
 			<center><h1>Contact info</h1></center>
   		<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
-	
+
+		<h2>Two Equal Columns</h2>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
+			
  <p>
  <a class='link' href="adrifelcha@gmail.com"><i class='fa fa-envelope-o'></i> adrifelcha@gmail.com </a> 
  </p>
