--- a/about/contact.html
+++ b/about/contact.html
@@ -24,7 +24,7 @@ title: About me
   			<div class="column" style="background-color:#aaa;">
 				<h3>Academic References</h3>
     				<p>E-mail:</p>
-				<a class='link' href="adrifelcha@gmail.com"><i class='fa fa-envelope-o'></i> adrifelcha@gmail.com </a> 
+				<a class='link' href="adrifelcha@gmail.com">adrifelcha@gmail.com </a> 
  				
 				
   			</div>
@@ -32,6 +32,7 @@ title: About me
     				<h3>Social media</h3>
     				<p>Twitter:</p>
 				<p>Facebook:</p>
+				<i class="fa fa-facebook-square" aria-hidden="true"></i>
 				<p>Instagram:</p>
 				<p>Youtube account</p>
   			</div>
