--- a/about/contact.html
+++ b/about/contact.html
@@ -31,13 +31,13 @@ title: About me
   			<div class="column" style="background-color:#bbb;">
     				<h3 style="text-align:center;">Social media</h3>
     				<p>Twitter:</p>
-				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha
 				<p>Facebook:</p>
-				<i class="fa fa-facebook-square" aria-hidden="true"></i>
+				<i class="fa fa-facebook-square" aria-hidden="true"></i> /Adrifelcha
 				<p>Instagram:</p>
-				<i class="fa fa-instagram" aria-hidden="true"></i>
+				<i class="fa fa-instagram" aria-hidden="true"></i> adrifelcha
 				<p>Youtube account</p>
-				<i class="fa fa-youtube-play" aria-hidden="true"></i>
+				<i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha
   			</div>
 		</div>
 			
