--- a/about/contact.html
+++ b/about/contact.html
@@ -43,14 +43,8 @@ title: About me
 				<i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha
   			</div>
 		</div>
-			
-
-  <p>
- Click here for my <a class='link' href="/documents/CV_FullFelisa.pdf"> Full CV (English) </a>
- </p>
-
 	
- 	
-</div><!-- /.blurb -->
+	
+</div>
 </body>
 <!-- about me -->
