--- a/about/contact.html
+++ b/about/contact.html
@@ -24,7 +24,7 @@ title: About me
   			<div class="column" style="background-color:#aaa; height:400px;">
 				<h3 style="text-align:center;">Academic References</h3>
     				<p>E-mail:</p>
-				<a class='link' href="adrifelcha@gmail.com">adrifelcha@gmail.com </a> 
+				<i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="adrifelcha@gmail.com">adrifelcha@gmail.com</a> 
 				<p>GitHub profile:</p>
 				<i class="fa fa-github"></i> <a class= 'link' href="https://github.com/Adrifelcha">/Adrifelcha</a>
 				
