--- a/about/contact.html
+++ b/about/contact.html
@@ -41,6 +41,8 @@ title: About me
 				<i class="fa fa-instagram" aria-hidden="true"></i> adrifelcha
 				<p>Youtube account</p>
 				<i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha
+				
+				<right><p>Yep, a pretty useful Username</p></right>
   			</div>
 		</div>
 	
