--- a/about/contact.html
+++ b/about/contact.html
@@ -18,7 +18,7 @@ title: About me
 		<br><br>
 		<div class="container">
 		
-			<center><h1><b>Contact info</b></h1></center>
+			<center><h1 style="color:#B40404;"><b>Contact info</b></h1></center>
   		
 		<div class="row">
   			<div class="column" style="background-color:#aaa; height:400px;">
