--- a/about/contact.html
+++ b/about/contact.html
@@ -42,7 +42,7 @@ title: About me
 				<p>Youtube account</p>
 				<i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha
 				
-				<h3 style="text-align:right;">Yep, a pretty useful Username</h3>
+				<h3 style="text-align:right;"><i>Yep, a pretty useful Username</i></h3>
   			</div>
 		</div>
 	
