--- a/about/contact.html
+++ b/about/contact.html
@@ -33,16 +33,16 @@ title: About me
   			</div>
   			<div class="column" style="background-color:#bbb; height:400px;">
     				<h3 style="text-align:center;">Social media</h3>
-    				<p>Twitter:</p>
+    				<p style="padding-left:5em;">Twitter:</p>
 				<i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha
-				<p>Facebook:</p>
+				<p style="padding-left:5em;">Facebook:</p>
 				<i class="fa fa-facebook-square" aria-hidden="true"></i> /Adrifelcha
-				<p>Instagram:</p>
+				<p style="padding-left:5em;">Instagram:</p>
 				<i class="fa fa-instagram" aria-hidden="true"></i> adrifelcha
-				<p>Youtube account</p>
+				<p style="padding-left:5em;">Youtube account</p>
 				<i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha
 				
-				<h3 style="text-align:right;"><i>Yep, a pretty useful Username</i></h3>
+				<h4 style="text-align:right;"><i>Yep, a pretty useful Username</i></h4>
   			</div>
 		</div>
 	
