--- a/about/contact.html
+++ b/about/contact.html
@@ -22,7 +22,7 @@ title: About me
   		
 		<div class="row">
   			<div class="column" style="background-color:#aaa; height:400px;">
-				<h3 style="text-align:center;">Academic References</h3>
+				<h3 style="text-align:center;"><b>Academic References</b></h3>
     				<p>E-mail:</p>
 				<i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="adrifelcha@gmail.com">adrifelcha@gmail.com</a> 
 				<p>GitHub profile:</p>
@@ -32,7 +32,7 @@ title: About me
 				
   			</div>
   			<div class="column" style="background-color:#bbb; height:400px;">
-    				<h3 style="text-align:center;">Social media</h3>
+				<h3 style="text-align:center;"><b>Social media</b></h3>
     				<p>Twitter:</p>
 				<p style="padding-left:5em;"><i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha</p>
 				<p>Facebook:</p>
