--- a/about/contact.html
+++ b/about/contact.html
@@ -34,15 +34,15 @@ title: About me
   			<div class="column" style="background-color:#bbb; height:400px;">
 				<h3 style="text-align:center;"><b>Social media</b></h3>
     				<p>Twitter:</p>
-				<p style="padding-left:5em;"><i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha</p>
+				<p style="padding-left:3em;"><i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha</p>
 				<p>Facebook:</p>
-				<p style="padding-left:5em;"><i class="fa fa-facebook-square" aria-hidden="true"></i> /Adrifelcha</p>
+				<p style="padding-left:3em;"><i class="fa fa-facebook-square" aria-hidden="true"></i> /Adrifelcha</p>
 				<p>Instagram:</p>
-				<p style="padding-left:5em;"><i class="fa fa-instagram" aria-hidden="true"></i> adrifelcha</p>
+				<p style="padding-left:3em;"><i class="fa fa-instagram" aria-hidden="true"></i> adrifelcha</p>
 				<p>Youtube account</p>
-				<p style="padding-left:5em;"><i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha</p>
+				<p style="padding-left:3em;"><i class="fa fa-youtube-play" aria-hidden="true"></i> adrifelcha</p>
 				
-				<h4 style="text-align:right;"><i>Yep, a pretty useful Username</i></h4>
+				<h4 style="text-align:right;"><i>Yep, I've got myself a pretty useful Username</i></h4>
   			</div>
 		</div>
 	
