--- a/about/contact.html
+++ b/about/contact.html
@@ -24,7 +24,7 @@ title: About me
   			<div class="column" style="background-color:#aaa; height:400px;">
 				<h3 style="text-align:center;"><b>Academic References</b></h3>
     				<p>E-mail:</p>
-				<p style="padding-left:3em;"><i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="adrifelcha@gmail.com">adrifelcha@gmail.com</a></p>
+				<p style="padding-left:3em;"><i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="mailto:adrifelcha@gmail.com">adrifelcha@gmail.com</a></p>
 				<p>GitHub profile:</p>
 				<p style="padding-left:3em;"><i class="fa fa-github"></i> <a class='link' href="https://github.com/Adrifelcha" target="_blank">/Adrifelcha</a></p>
 				<p>Lab Website:</p>
