--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ title: About me
 			<center>
 		<h1>Who am I?</h1>
 		
-<h3>My name is Adriana Felisa Chávez De la Peña, I'm an undergrad Psychology student at the National Autonomous University of México (UNAM), and if the Earth keeps spinning as it's meant to, I'm supposed to be getting my BA degree next February.</h3>
+<h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I'm an undergrad Psychology student at the National Autonomous University of México (UNAM), and if the Earth keeps spinning as it's meant to, I'm supposed to be getting my BA degree next February.</h3>
 
 <h3>As a psychologist, I'm interested in the study of both: the general rules that control Behavior and the Cognitive processes behind them. </h3>
 				
