--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: About me
     	</header>
 		<br><br>
 	<center>
-		<div class="w3-container">
+		<div class="w3-container" style="padding: 16px;">
  			<a href="index.html" class="w3-button w3-black">Who am I?</a>
   			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
   			<a href="#" class="w3-button w3-black">Bio & General description</a>
