--- a/about/contact.html
+++ b/about/contact.html
@@ -22,7 +22,7 @@ title: About me
   		
 		<div class="row">
   			<div class="column" style="background-color:#aaa; height:400px;">
-				<h3 style="text-align:center;"><b>Academic References</b></h3>
+				<h3 style="text-align:center;"><i class="fa fa-flask" aria-hidden="true"></i><b> Academic References </b><i class="fa fa-flask" aria-hidden="true"></i></h3>
     				<p>E-mail:</p>
 				<p style="padding-left:3em;"><i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="mailto:adrifelcha@gmail.com">adrifelcha@gmail.com</a></p>
 				<p>GitHub profile:</p>
@@ -34,7 +34,7 @@ title: About me
 				
   			</div>
   			<div class="column" style="background-color:#bbb; height:400px;">
-				<h3 style="text-align:center;"><b>Social media</b></h3>
+				<h3 style="text-align:center;"><b><i class="fa fa-glass" aria-hidden="true"></i> Social media <i class="fa fa-glass" aria-hidden="true"></i></b></h3>
     				<p>Twitter:</p>
 				<p style="padding-left:3em;"><i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha</p>
 				<p>Facebook:</p>
