--- a/about/contact.html
+++ b/about/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About me
+title: Contact info
 ---
 <body background="fondo_pages.png">
 	<header class=style2 style="background-color: #8A0808;">
