--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
 		<div class="container" style="background-color: #F5ECCE;">
 		<br><br>
 			
-	<h1>Site under construction</h1>
+			<h1><center><u><b>Site under construction</b></u></center></h1>
 	
 	<h1>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
 	
