--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@ title: Home
 		<div class="container" style="background-color: #F5ECCE;">
 		<br><br>
 			
-			<h1><center><u><b>Site under construction</b></u></center></h1>
+			<h1><center><u><b>This site is still under construction</b></u></center></h1>
 	
-	<h1>I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
-	
-	<h3><b>I can't decide which colors use for my website :C I wanted something full of life (like a  rainbow) but that doesn't look quite academic-ish</b></h3>
+			<h3>Hello, visitors! Welcome to my personal GitHub Page</h3>
 			
-	<h3> I think my website looks a little awful. But, hey, I don't know how to properly dress myself (in terms of fashion or anything), so don't judge my missuse of the colors on this website </h3>
+			<h3>Allow me to introduce myself: I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
 </div>
