--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ title: Home
 		<br><br>
 			
 			<h1><center><u><b>This site is still under construction</b></u></center></h1>
+			<img class="displayed" src="under_construction.jpg" />
 	
-			<h3>Hello, visitors! Welcome to my personal GitHub Page</h3>
+			<h3>Hello, visitors! Welcome to my personal GitHub Page :)</h3>
 			
 			<h3>Allow me to introduce myself: I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
 </div>
