--- a/about/contact.html
+++ b/about/contact.html
@@ -11,7 +11,7 @@ title: Contact info
 		<div class="w3-container">
  			<a href="index.html" class="w3-button w3-black">Who am I?</a>
   			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
-  			<a href="bio.html" class="w3-button w3-black">Bio & General description</a>
+  			<a href="bio.html" class="w3-button w3-black">Bio & Pictures</a>
 		</div>
 	</center>
 	
