--- a/about/index.html
+++ b/about/index.html
@@ -9,9 +9,9 @@ title: About me
 		<br><br>
 	<center>
 		<div class="w3-container">
- 			<a href="index.html" class="w3-button w3-black">Who am I?</a>
-  			<a href="contact.html" class="w3-button w3-black">Contact Info</a>
-  			<a href="bio.html" class="w3-button w3-black">Bio & Pictures</a>
+ 			<a href="index.html" class="w3-button w3-black w3-round-large w3-border">Who am I?</a>
+  			<a href="contact.html" class="w3-button w3-black w3-round-large w3-border">Contact Info</a>
+  			<a href="bio.html" class="w3-button w3-black w3-round-large w3-border">Bio & Pictures</a>
 		</div>
 	</center>
 	
