--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title: Home
 		<div class="container" style="background-color: #F5ECCE;">
 		<br><br>
 			<img class="displayed" src="under_construction.png" />
-			<h1><center><u><b>This site is still under construction</b></u></center></h1>
+			<h1><center><u><b>This site is still under construction</b></u></h1>
 			<br><br>
 			<h3>Hello, visitors! Welcome to my personal GitHub Page :)</h3>
 			
 			<h3>Allow me to introduce myself: I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
-</div>
+</center></div>
