--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,14 @@ title: About me
 <br>
 <h3>As a psychologist, I'm interested in the study of both: the general rules that control Behavior and the Cognitive processes behind them. </h3>
 <br>		
-<h3> Since 2015, I've been an active member of Lab25 <a href="http://www.bouzaslab25.com" target="_blank"><i>(Visit our website here!)</i></a>, a happy place where a bunch of pretty interesting (and socially awkward) psychology students, as myself, are interested in the study of a wide variety of adaptative problems faced by every organism who's actions seek for an optimal behaviour. Our fields of interest cover from the most classic dilemmas on Psychophysics to the more abstract problem faced by those who study heuristics and decission making. As mixed-up as it may sound, we do a pretty good job making sense out of it, mostly thanks to the guidance of <b>Dr  Arturo Bouzas Riaño</b>, our mentor. </h3>
+<h3> Since 2015, I've been an active member of Lab25 <a href="http://www.bouzaslab25.com" target="_blank"><i>(Visit our website here!)</i></a>, a happy place where a bunch of pretty interesting (and socially awkward) psychology students, as myself, are interested in the study of a wide variety of adaptative problems faced by every organism who's actions seek for Optimality. Our fields of interest cover from the most classic dilemmas on Psychophysics to the more abstract problem faced by those who study heuristics and decission making. As mixed-up as it may sound, we do a pretty good job making sense out of it, mostly thanks to the guidance of <b>Dr  Arturo Bouzas Riaño</b>, our mentor. </h3>
 <br>
+<h3></h3>
+<br>
+<h3>As well as being a researcher, my passion for Experimental Psychology is also reflected in a huge interest on the teaching part. As a member of Lab25, I've worked as a T.A. for several courses given by Dr Bouzas, and I've directed three vacational courses among two of my colleagues and best friends (<b>José Manuel Niño</b> and <b>Uriel O. González Bravo</b>). Also, I'd been the head student of one of the projects conducted at Lab25, where weve '</h3>
+<b>
+
+			
 		
 	
  	
