--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ title: About me
 		<br><br>
 		<div class="container" style="padding: 16px;">
 					
-			<h1 style="text-align:center;"><b>Who am I?</b></h1>
+			<h1 style="text-align:center; style="color:#B40404;""><b>Who am I?</b></h1>
 		
 <h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I'm an undergrad Psychology student at the National Autonomous University of México (UNAM), and if the Earth keeps spinning as it's meant to, I'm supposed to be getting my BA degree next February.</h3>
 <br>
