--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: My work
 		<div class="container">
 		<br><br>
 
-	<h1>My work: What do I do?</h1>
+	<h1 style="text-align:center; color:#B40404;"><b>What do I do?</b></h1>
   
 	<h2>
 	<p> Hang on in there! I'll be back as soon as I'm done preparing this section of my GitHub page</p>
