--- a/cv/index.html
+++ b/cv/index.html
@@ -21,17 +21,7 @@ title: My work
 	<p></p>
 	</h2>
 
-<h3>
- <p>
- <a class='link' href="adrifelcha@gmail.com"><i class='fa fa-envelope-o'></i> adrifelcha@gmail.com </a> 
- </p>
- <p>
- <a class= 'link' href="https://github.com/BouzasLab25"><i class="fa fa-github"></i> /Adrifelcha</a><br>
-  </p>
-  <p>
- Click here for my <a class='link' href="/documents/CV_FullFelisa.pdf"> Full CV (English) </a>
- </p>
-</h3>
+<h3><p>  Click here for my <a class='link' target="_blank" href="/documents/CV_FullFelisa.pdf"> Full CV (English) </a></p></h3>
 	
  	
 </div><!-- /.blurb -->
