--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
     	</header>
 	
 		<br><br>
-		<div class="container" style="background-color: #F5ECCE;">
+		<div class="container" style="background-color: #DBA901;">
 		<br><br>
 			<img class="displayed" src="under_construction.png" />
 			<h1><center><u><b>This site is still under construction</b></u></h1>
