--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Home
 ---
 	<header class=style2 style="background-color: #DBA901; font-weight: bold;">
-      		<h1 class="project-name">{{ page.title }}</h1>
+      		<h1 class="project-name" style="color:#DBA901;">{{ page.title }}</h1>
     	</header>
 	
 		<br><br>
-		<div class="container" style="background-color: #DBA901;">
+		<div class="container">
 		<br>
 			<img class="displayed" src="under_construction.png" />
 			<h1><center><u><b>This site is still under construction</b></u></h1>
