--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 	<header class=style2 style="background-color: #DBA901; font-weight: bold;">
-      		<h1 class="project-name" style="color:#DBA901;">{{ page.title }}</h1>
+      		<h1 class="project-name">{{ page.title }}</h1>
     	</header>
 	
 		<br><br>
