--- a/about/contact.html
+++ b/about/contact.html
@@ -22,7 +22,7 @@ title: Contact info
   		
 		<div class="row">
   			<div class="column" style="background-color:#aaa; height:450px;">
-				<h3 style="text-align:center;"><i class="fa fa-flask" aria-hidden="true"></i><b> Academic References </b><i class="fa fa-flask" aria-hidden="true"></i></h3>
+				<h3 style="text-align:center;"><i class="fa fa-flask" aria-hidden="true"></i><b> <u>Academic References</u> </b><i class="fa fa-flask" aria-hidden="true"></i></h3>
     				<p>E-mail:</p>
 				<p style="padding-left:3em;"><i class="fa fa-envelope-open" aria-hidden="true"></i> <a class='link' href="mailto:adrifelcha@gmail.com">adrifelcha@gmail.com</a></p>
 				<p>GitHub profile:</p>
@@ -31,7 +31,7 @@ title: Contact info
 				<p style="padding-left:3em;"><i class="fa fa-star" aria-hidden="true"></i> <a class= 'link' href="http://www.bouzaslab25.com" target="_blank">www.bouzaslab25.com</a></p>
  			</div>
   			<div class="column" style="background-color:#bbb; height:450px;">
-				<h3 style="text-align:center;"><b><i class="fa fa-glass" aria-hidden="true"></i> Social media <i class="fa fa-glass" aria-hidden="true"></i></b></h3>
+				<h3 style="text-align:center;"><b><i class="fa fa-glass" aria-hidden="true"></i> <u>Social media</u> <i class="fa fa-glass" aria-hidden="true"></i></b></h3>
     				<p>Twitter:</p>
 				<p style="padding-left:3em;"><i class="fa fa-twitter" aria-hidden="true"></i> @adrifelcha</p>
 				<p>Facebook:</p>
