--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ title: About me
 					
 			<h1 style="text-align:center; color:#B40404;"><b>Who am I?</b></h1>
 		
-<h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I'm an undergrad Psychology student at the National Autonomous University of México (UNAM), and if the Earth keeps spinning as it's meant to, I'll be getting my BA degree next February.</h3>
+<h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I have a Bachelor degree in Psychology, which I completed at the National Autonomous University of México (UNAM), and if the Earth keeps spinning as it's meant to, I'll be getting my BA degree next February.</h3>
 <br>
 <h3>As a psychologist, I'm interested in the study of both: the general rules that control Behavior and the Cognitive processes behind them. </h3>
 <br>		
