--- a/about/index.html
+++ b/about/index.html
@@ -20,9 +20,7 @@ title: About me
 					
 			<h1 style="text-align:center; color:#B40404;"><b>Who am I?</b></h1>
 		
-<h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I have a Bachelor degree in Psychology, which I completed at the National Autonomous University of México (UNAM).</h3>
-<br>
-<h3>As a psychologist, I'm interested in the study of both: the general rules that control Behavior and the Cognitive processes behind them. </h3>
+<h3>My name is <b>Adriana Felisa Chávez De la Peña</b>, I have a Bachelor degree in Psychology, which I completed at the National Autonomous University of México (UNAM). As a psychologist, I'm interested in the study of both: the general rules that control Behavior and the Cognitive processes behind them. </h3>
 <br>		
 <h3> Since 2015, I've been an active member of Lab25 <a href="http://www.bouzaslab25.com" target="_blank"><i>(Visit our website here!)</i></a>, a happy place where a bunch of pretty interesting (and socially awkward) psychology students, as myself, are interested in the study of a wide variety of adaptative problems faced by every organism whose actions seek for Optimality. Our fields of interest cover from the most classic dilemmas in Psychophysics (the study of Just Noticeable Differences on Probability Changes, has been very popular among my colleagues recently!), to the study of heuristics, nudges, public policies and decission making. As mixed-up as it may sound, we do a pretty good job making sense out of it, mostly thanks to the guidance of <b>Dr  Arturo Bouzas Riaño</b>, our mentor. </h3>
 <br>
