--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@ title: Home
 			<br><br>
 			<h3>Hello, visitors! Welcome to my personal GitHub Page :)</h3>
 			
-			<h3>Allow me to introduce myself: I'm a very enthusiastic undergrad Psychology student at the <em> National Autonomous University of Mexico </em> </h1>
+			<h3>Allow me to introduce myself: I'm a very enthusiastic Experimental Psychologist (I've got my B.A. degree at the <em> National Autonomous University of Mexico </em> </h1>
 </center></div>
